--- a/index.html
+++ b/index.html
@@ -79,5 +79,7 @@
     </footer>
 </body>
 
-<script src="/js/script.js"></script>
+<script src="js/script.js">
+    document.addEventListener('DOMContentLoaded', desc(1));
+</script>
 </html>
