--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                     <div class="contenedor-der6">
                         <div class="servicio"></div>
                         <div class="descServicio"></div>
+                        <div class="firma">
+                            <button class="agendaCita">Agenda Tu Cita</button>
+                        </div>
                         
     
                     </div>
