--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     
         <div class="contenedor-sedes">
             <div class="contenedor-sedes-izq">
-                <h3>Acercate a tu sede mas cercana</h3>
+                <h3>Acercate a la sede mas cercana</h3>
                 <menu>
                     <li class="sedes" onclick="mostrar_mapa(1)">
                         <div class="icono-sede"></div>
