--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="contenedor-central">
             <div class="contenedor-izq2">
                 <div class="contenedor-izq">
-                    <div class="logo"></div>
+                    <div class="logo" id="logo"></div>
                     <div class="descripcion">
                         Celebramos la esencia de la masculinidad a través del arte clásico del cuidado personal.
                         Somos un espacio diseñado para hombres que valoran la tradición, el estilo y la confianza.
