--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <div>
+    <div class="hola">
         <div class="contenedor-titulo">
             <div class="titulo" >Deer Barber-Shop</div>
             <div class="logo"></div>
@@ -33,7 +33,7 @@
                         Aquí, cada corte no solo es un servicio, sino un ritual que refuerza tu identidad
                         y proyecta tu mejor versión.
                     </div>
-                    <div class="descripcion">¡Conocenos!</div>
+                    <div class="descripcion" id="descripcion">¡Conocenos!</div>
                     <div class="personal">
                         <button onmouseover="desc(1)">Jack</button>
                         <button onmouseover="desc(2)">John</button>
@@ -216,7 +216,7 @@
 
 
     <footer>
-        <ul>
+        <ul class="nav">
             <div class="menu" onclick="mostrar(0)">
                 <li>Nosotros</li>
             </div>
@@ -229,9 +229,9 @@
             <div class="menu" onclick="mostrar(3)">
                 <li>Contacto</li>
             </div>
-
-            
         </ul>
+
+        <div class="icono-menu"></div>
     </footer>
 
 
