--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="descripcion">
                         La esencia masculina se vive en cada detalle. Somos un espacio donde tradición y estilo se fusionan para resaltar tu carácter y personalidad. Aquí, el cuidado personal no es solo un servicio, es un ritual diseñado para el hombre moderno que valora su imagen y confianza.
                     </div>
-                    <div class="descripcion">Conoce nuestros servicios</div>
+                    <div class="descripcion" id="descripcion">Conoce nuestros servicios</div>
                     <div class="botones-servicios">
                         <button class="boton-servicio" id="1" onmouseover="desc_serv(1)"></button>
                         <button class="boton-servicio" id="2" onmouseover="desc_serv(2)"></button>
